[gd_scene load_steps=4 format=3 uid="uid://fwqppsiqy6er"]

[ext_resource type="Script" path="res://scripts/menus/instructions1.gd" id="1_d4jgh"]
[ext_resource type="Texture2D" uid="uid://b1xkapd0vicvw" path="res://assets/art/menus/InstructionsPageOne.png" id="2_8acqo"]
[ext_resource type="Texture2D" uid="uid://b1rqjbum1j6hm" path="res://assets/art/ui/Arrow.png" id="3_t8wxe"]

[node name="InstructionsPageOne" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4jgh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8acqo")

[node name="PageTwoButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.932
anchor_top = 0.888
anchor_right = 0.984
anchor_bottom = 0.969
offset_left = 99.5598
offset_top = -0.0401611
offset_right = 87.72
offset_bottom = 12.48
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture_normal = ExtResource("3_t8wxe")

[connection signal="mouse_entered" from="PageTwoButton" to="." method="_on_page_two_button_mouse_entered"]
[connection signal="mouse_exited" from="PageTwoButton" to="." method="_on_page_two_button_mouse_exited"]
[connection signal="pressed" from="PageTwoButton" to="." method="_on_page_two_button_pressed"]
